# Rooc

./: .gitignore  Makefile  README.md  Rooc.opam  dune-project  test-success-float-arith.ll  test-success-int-arith.ll  test_print.sh  testall.sh  testfail.sh  testsuccess.sh  working_notes.md
_build/: .db  .digest-db  log
doc/: Rooc.md  TheRoocReference.md
lib/: dune
tests/: .gitignore  fail-func.rooc  fail-if.rooc  fail-impl.rooc  fail-struct.rooc  fail-trait.rooc  fail-type1.rooc  fail-while.rooc  print.ll  print.s  test-fail-arith.rooc  test-fail-builtin.std  test-fail-call1.std  test-fail-comp2.std  test-fail-function1.std  test-fail-logic.std  test-fail-scope1.std  test-fail-struct0.std  test-fail-struct1.rooc  test-fail-struct4.rooc  test-success-arith  test-success-arith.rooc  test-success-bool  test-success-bool.rooc  test-success-builtins1.rooc  test-success-comments.rooc  test-success-expr1.rooc  test-success-fib.rooc  test-success-for  test-success-for.rooc  test-success-func  test-success-func.rooc  test-success-function-void.rooc  test-success-function1.rooc  test-success-grouped.rooc  test-success-if  test-success-if.rooc  test-success-impl  test-success-impl.rooc  test-success-int-arith.rooc  (+28 more)
tests_backup/: fail-function1.rooc  fail-scope1.rooc  fail-struct1.rooc  test-fail-struct-runtime.rooc  test-fail-unary.rooc  test-success-function2.rooc  test-success-linkedlist.rooc  test-success-list.rooc  test-success-nested-callexpr.rooc  test-success-scope1.rooc  test-success-scope2.rooc  test-success-struct.c  test-success-struct.rooc  test-success-trait.c  (+4 more)
(+91 files in other folders)
