(lang dune 3.7)

(name Rooc)

(generate_opam_files true)

(source
 (github MntCer/Rooc))

(authors "Mona" "Xinyang" "Yuanfei")

(maintainers "Mona" "Xinyang" "Yuanfei")

;TODO
(license LICENSE)

;TODO
(documentation https://url/to/documentation)

;TODO
(package
 (name Rooc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

(using menhir 2.0)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
